syntax = "proto2";

package protos;

message PlayerProto {
  required int32 id = 1;
  optional string pseudo = 2;
}