syntax = "proto2";

import "room.proto";

package protobuf;

message RoomsListProto {
  repeated RoomProto room = 1;
}